Changelog
=========

1.2.0 (unreleased)
------------------

- Create packall script for packing of all storages.
  [buchi]

- Fix handling of logrotate options in buildout 2.x by no longer dropping the
  first option.
  [buchi]


1.1.1 (2014-01-21)
------------------

- Make postrotate command fail silently if pid file is missing.
  [buchi]


1.1 (2013-03-05)
----------------

- Added option to specify the user under which run-control scripts start
  processes.
  [buchi]

- Added status command to supervisor run-control script.
  [buchi]


1.0.1 (2012-03-12)
------------------

- Fixed handling of logrotate options containing whitespaces.
  [buchi]


1.0 (2012-03-12)
----------------

- Initial release.
  [buchi]